Updated Readme. Added homepage to the package.json. Uploaded the screenshot of the app

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-knowledge-checker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://react-tracking-learning.overlapweb.com/",
   "dependencies": {
     "@headlessui/react": "^1.6.2",
     "@testing-library/jest-dom": "^5.16.4",
