Added script to avoid warnings as errors:

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-knowledge-checker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://react-tracking-learning.overlapweb.com/",
+  "homepage": "https://react-tracking-learning.overlapweb.com/",
   "dependencies": {
     "@headlessui/react": "^1.6.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -24,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-CI": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
